--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -37,3 +37,21 @@
     flex-flow: column wrap; /*faz de uma vez só a função dos 2 comentados*/
     height: 252px; /*definindo a altura desta nav*/
 }
+
+.conteudoPrincipal-cursos {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.conteudoPrincipal-cursos-link {
+    width: 23%;
+    margin-bottom: 1%;
+}
+
+.conteudoPrincipal-cursos-link:nth-child(4n) {
+    margin-right: 0;
+}
+
+.conteudoPrincipal-cursos-link:nth-child(4n+1) {
+    margin-left: 0;
+}
