mapa de cursos responsivo

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -70,3 +70,15 @@
     align-items: initial;
     text-align: center;
 }
+
+.conteudoPrincipal-cursos {
+    flex-direction: column;
+}
+
+.conteudoPrincipal-cursos-link {
+    width: 100%;
+}
+
+.rodapePrincipal-navMap-list {
+    height: auto;
+}
