--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -60,6 +60,26 @@
     margin-left: 0;
 }
 
+.videoSobre .container {
+    display: flex;
+}
+
+
+.videoSobre-sobre {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
+.videoSobre-video {
+    flex-grow: 1;
+}
+
+.videoSobre-sobre-list {
+    flex-grow: 1;
+}
+
 /* Parte mobile */
 @media(max-width: 768px) {
     .cabecalhoPrincipal-nav {
@@ -100,5 +120,17 @@
 
     .rodapePrincipal-contatoForm-fieldset {
         justify-content: center;
+    }
+
+    .cabecalhoPrincipal-nav-link-app {
+        order: -1; /*coloca este item em primeiro, pois por padrão todos são 0. Se quisesse colocar em último lugar: 'order: 1;'*/
+    }
+
+    .videoSobre .container {
+        flex-direction: column;
+    }
+
+    .videoSobre-video {
+        margin: 0 auto;
     }
 }
